# Dota2Utils

./: .gitignore  .gitmodules  AHKScript.ahk  D2RoshTimer.exe - Shortcut.lnk  README.md  _DotaUtils.ipynb  _config.yml  _quest_refresh.bat  _quest_refresh.py  autoexec.cfg  env.env.example  requirements.txt
.github/workflows/: main.yml  rebase_gh-pages.yml
AHKScript/: AHKScript.ahk  AHKScript.exe - Shortcut.lnk  README.md  Startup - Shortcut.lnk
Autoexec/: README.md  autoexec.cfg
Autoexec_xd/: README.md
BiweeklyQuestRefresh/: README.md  biweekly_quest_refresh.bat  biweekly_quest_refresh.py  launcher.py  requirements.txt
BiweeklyQuestRefresh/utils/: __init__.py  const.py  helpers.py
D2RoshTimer/: README.md
DplusQuests/: README.md  dplus_quests.bat  main.py  pyproject.toml
HeroGridEditing/: HeroGridEditing.ipynb  README.md  dota_utils.py  requirements.txt
HeroGrids/: .gitignore  README.md  main.py  pyproject.toml
HeroGrids/utils/: __init__.py  api.py
ItemBuilds/: .gitignore  README.md  config.example.py  main.py  pyproject.toml
ItemBuilds/data/: backup_heroes.json
ItemBuilds/typings/: README.md
ItemBuilds/typings/vdf/: __init__.pyi  vdict.pyi
ItemBuilds/utils/: __init__.py  api.py  deprecated.py  enums.py  errors.py
ListEmoticons/: ListEmoticons.ipynb  README.md  TODO.md  file.md  index.md  main.py  pyproject.toml  requirements.txt
ListEmoticons/typings/vdf/: __init__.pyi  vdict.pyi
ListEmoticons/utils/: __init__.py  helpers.py
SocialFeed/: README.md  TODO.md  main.py  pyproject.toml  social_feed.py
SocialFeedPosting/: README.md  TODO.md  social_feed.py
_layouts/: default.html
assets/css/: style.scss
